tests/lowering/foreign-declaration-with-explicit-body.lushui
;; TEST fail check

@foreign
data Void: Type =

@foreign thing = 0
